# rag-system

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  diag_chroma.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg  start.bat  start_deepscientist_silent.vbs  test_adaptive_routing.py  test_chat.py  wrangler.toml
auto-research/: evaluation_results.json  program.md  results.tsv
backend/: .env.example  CODE_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_REASONING_GUIDE.md  MIGRATION_GUIDE.md  REASONING_RAG_ARCHITECTURE.md  REASONING_RAG_SUMMARY.md  __init__.py  agent.py  agent_v1.py  agent_v2.py  auth.py  chroma_knowledge_base.py  config.py  cross_retrieval_engine.py  database.py  diagnose_rag.py  exceptions.py  hybrid_retriever.py  knowledge_base.py  llm_service.py  logging_config.py  main.py  models.py  pytest.ini  rate_limit.py  reasoning_engine.py  reasoning_rag.py  requirements.txt  reranker.py  run.py  session_manager.py  test_api.py  test_api_provider.py  test_ascii.py  test_cross_retrieval.py  test_llm.py  test_query.json  test_server.py  test_simple.py  (+3 more)
database/: enhance_kb.py  rag_knowledge_base.json  raw_text.txt  rebuild_kb.py
docs/: CODE_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ROOT.md  INTELLIGENT_REASONING_GUIDE.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PRD.md  RAG_OPTIMIZATION.md  REASONING_RAG_ARCHITECTURE.md  REASONING_RAG_SUMMARY.md  REFACTORING_COMPLETE.md  REFERENCE_PAPERS.md  产品简报.md  代码实现总结.md  (+5 more)
(+399 files in other folders)
