[metadata]
name = student-ai-assistant
version = 1.0.0
description = 安信工AI小助手 - 人工智能专业智能问答系统
author = Development Team
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8

[flake8]
max-line-length = 127
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[isort]
profile = black
line_length = 127
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True